# analytics_sustentare

./: main.py  pyproject.toml
dashboard/: db_relacionamento.csv  queries.ipynb  rd_station.ipynb
